fixed navbar overlap..defined height

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
 header{
 	padding-left: 20px;
 	padding-right: 20px;
+	height: 42px;
 }
 .navbar .logo{
 	padding: 5px;
